fix people spacing

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4466,8 +4466,8 @@ select[multiple].input-group-sm>.input-group-btn>.btn {
 
 .navbar {
     position: relative;
-    min-height: 20px;
-    margin-bottom: 5px;
+    min-height: 50px;
+    margin-bottom: 20px;
     border: 1px solid transparent;
 }
 
